# lua-xcb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
common/: CMakeLists.txt  common.c  common.h  xcb_common.c  xcb_common.h
cr/: cairo.sh
example/: xcb.lua  xcb_ev.lua
ft/: freetype.h  freetype.sh  ftadvanc.h  ftadvanc.hh  ftadvanc.sh  ftglyph.h  swig_freetype.i  swig_ftadvanc.i
ng/: example.lua  hello_xcb.lua  swig_xcb.i  xcb.hh  xcb.lua  xcb.sh  xcb_ffi.lua
reference/: hello_xcb.c
src/: button_event.c  button_event.h  connection.c  connection.h  drawing.c  drawing.h  event.c  event.h  key_event.c  key_event.h  lua_xcb.h  screen.c  screen.h  visual.c  visual.h  window_event.c  window_event.h  xcb.c
swig/cr/: cairo.sh  cairo_ft.sh  cairo_xcb.sh  hello_cairo.lua  names_cairo.lua  swig_cairo.i  swig_cairo_ft.i  swig_cairo_xcb.i
swig/fb/: fribidi.hh  fribidi.sh  hello_fb.lua  names_fb.lua  swig_fribidi.i
swig/fc/: fc.sh  hello_fc.lua  names_fc.lua  swig_fc.i
swig/ft/: freetype.hh  freetype.lua  freetype.sh  ftglyph.hh  ftglyph.sh  ftoutln.h  ftoutln.hh  ftoutln.sh  hello2_ft.lua  hello3.lua  hello_ft.lua  hello_pango.lua  names_ft.lua  swig_freetype.i  swig_ftglyph.i  swig_ftoutln.i
swig/hb/: harfbuzz.lua  hb.sh  hb_ft.sh  hb_glib.sh  hb_icu.sh  hb_ot.sh  hello_hb.lua  names_hb.lua  swig_hb.i  swig_hb_ft.i  swig_hb_glib.i  swig_hb_icu.i  swig_hb_ot.i
swig/icu/: breaks.lua  chars.lua  hello.lua  icu.sh  swig_icu.i  swig_icu_ubrk.i  ubrk.sh
swig/tiny/: names.lua  swig_tinyc2.i  tinyc2.c  tinyc2.sh
swig/xcb/: example_ffi.lua  hello2_xcb.lua  hello_xcb.lua  swig_xcb.i  xcb.lua  xcb.sh  xcb_h.lua
